
      \item New simple \code{provideDimnames()} utility.

      \item Where methods for \code{length()} return a double value
      which is representable as an integer (as often happens for package
      \CRANpkg{Matrix}), this is converted to an integer.
      
      \item On Windows, the C stack size has been increased to 64MB (it
      has been 10MB since the days of 32MB RAM systems).
    }
  }

  \subsection{LONG VECTORS}{
    \itemize{
      \item There are the beginnings of support for vectors longer than
      \eqn{2^{31}-1}{2^31 - 1} elements on 64-bit platforms.  This
      applies to raw, logical, integer, double, complex and character
      vectors, as well as lists.  (Elements of character vectors remain
      limited to \eqn{2^{31}-1}{2^31 - 1} bytes.)

      All aspects are currently experimental.

      \item What can be done with such vectors is currently somewhat
      limited, and most operations will return the error \sQuote{long
      vectors not supported yet}.  They can be serialized and
      unserialized, coercion, \code{identical()} and
      \code{object.size()} work and means can be computed.  Their
      lengths can be get and set by \code{xlength()}: calling
      \code{length()} on a long vector will throw an error.

      \item Most aspects of indexing are available.  Generally
      double-valued indices can be used to access elements beyond
      \eqn{2^{31}-1}{2^31 - 1}.

      \item There is some support for matrices with each dimension less
      than \eqn{2^{31}}{2^31} but total length more than that.

      \item \code{dist()} can produce dissimilarity objects for more
      than 65536 rows (but for example \code{cmdscale()} and
      \code{hclust()} cannot process such objects).

      \item \code{serialize()} to a raw vector is no longer limited in
      size on 64-bit platforms.

      \item The C-level function \code{R_alloc} can now allocate
      \eqn{2^{34}}{2^34} or more bytes on 64-bit platforms.
